# intzavbot

./: .gitignore  README.md  pyproject.toml
src/intzavbot/: __main__.py  cli.py  command_extractor.py  models.py  multi_pattern_extractor.py  utils.py
src/intzavbot/handlers/: meta_handler.py
tests/: test_command_extractor.py
